--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "next": "14.2.13",
     "next-sitemap": "^4.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "react-google-recaptcha": "^3.1.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.5.0",
