testing working with babel and jest configurations updated

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "types": ["jest", "@testing-library/jest-dom"]
   },
   "include": [
     "next-env.d.ts",
