--- a/firebase.json
+++ b/firebase.json
@@ -14,5 +14,20 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "emulators": {
+    "auth": {
+      "port": 3002
+    },
+    "firestore": {
+      "port": 3003
+    },
+    "hosting": {
+      "port": 3004
+    },
+    "ui": {
+      "enabled": true
+    },
+    "singleProjectMode": true
   }
 }
