--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "firebase emulators:start --only auth,firestore & next dev -p 3001",
+    "dev": "next dev -p 3001",
     "build": "next build && next-sitemap",
     "start": "next start",
     "lint": "next lint",
-    "test": "firebase emulators:exec --only auth,firestore \"jest\"",
-    "test:watch": "firebase emulators:exec --only auth,firestore \"jest --watch\"",
+    "test": "firebase emulators:exec --only auth,firestore,hosting \"jest\"",
+    "test:watch": "firebase emulators:exec --only auth,firestore,hosting \"jest --watch\"",
     "deploy": "next build && firebase deploy"
   },
   "dependencies": {
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@babel/preset-react": "^7.25.7",
     "@babel/preset-typescript": "^7.25.7",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.13",
@@ -37,8 +37,8 @@
     "eslint-config-next": "14.2.14",
     "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-jest-dom": "^5.4.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.5",
